Added transparent "None" skin option for better Armourer's Workshop   compatibility and other mod support. Fixed issue with advanced and custom pose model rendering. Fixed issue with auto-selecting the correct dialog type within the configuration screen. Optimized model data for better performance and smaller data size. Completed EasyNPC wiki documentation for all features.

--- a/Common/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -65,9 +65,9 @@
   "text.easy_npc.config.clear": "Löschen",
   "text.easy_npc.config.copy_uuid": "UUID kopieren",
   "text.easy_npc.config.crossbow_attack": "Armbrust Angriff",
-  "text.easy_npc.config.custom": "Benutzerdefiniert",
-  "text.easy_npc.config.custom_skin_text": "Benutzerdefiniert Skins ermöglicht es dir, lokal gespeicherte Skins zu verwenden.",
-  "text.easy_npc.config.custom_trading_checkbox": "Benutzerdefinierter Handel",
+  "text.easy_npc.config.custom": "Individuell",
+  "text.easy_npc.config.custom_skin_text": "Individuelle Skins ermöglicht es dir, lokal gespeicherte Skins zu verwenden.",
+  "text.easy_npc.config.custom_trading_checkbox": "Individueller Handel",
   "text.easy_npc.config.custom_trading_text": "Das Kontrollkästchen ermöglicht den Handel mit benutzerdefinierten NBT-Daten.\n\nDies kann nützlich sein, wenn der Handel über benutzerdefinierte NBT-Daten und nicht über die Benutzeroberfläche definiert wird.",
   "text.easy_npc.config.debug": "Debuggen",
   "text.easy_npc.config.default": "Standard",
@@ -94,6 +94,9 @@
   "text.easy_npc.config.disable_trading": "Keinen",
   "text.easy_npc.config.disable_trading_checkbox": "Deaktiviere Handel",
   "text.easy_npc.config.disable_trading_text": "Das Kontrollkästchen deaktiviert den Handel, was bedeutet, dass der Handel nicht angezeigt oder aktiviert wird, wenn das Kontrollkästchen ausgewählt oder markiert wird.\n\nDies kann nützlich sein, wenn der Handel über andere Aktionen getriggert wird.",
+  "text.easy_npc.config.disable_skin": "Keinen",
+  "text.easy_npc.config.disable_skin_checkbox": "Skin deaktivieren",
+  "text.easy_npc.config.disable_skin_text": "Das Kontrollkästchen deaktiviert den Skin, was bedeutet, dass der Skin nicht angezeigt wird, wenn das Kontrollkästchen ausgewählt oder aktiviert ist.\n\nDies kann nützlich sein, wenn der Skin von anderen Mods gerendert wird oder wenn Sie einen unsichtbaren NPC benötigen.",
   "text.easy_npc.config.distance_actions": "Entfernung",
   "text.easy_npc.config.edit_no_button": "Nein Button bearbeiten",
   "text.easy_npc.config.edit_skin": "Skin bearbeiten",
@@ -178,7 +181,7 @@
   "text.easy_npc.config.pose.standing": "Stehen",
   "text.easy_npc.config.pose.swimming": "Schwimmen",
   "text.easy_npc.config.position": "Position",
-  "text.easy_npc.config.preset_custom_for": "Benutzerdefinierte Vorlagen für %s",
+  "text.easy_npc.config.preset_custom_for": "Individuelle Vorlagen für %s",
   "text.easy_npc.config.preset_default_for": "Standard Vorlagen für %s",
   "text.easy_npc.config.preset_world_for": "Welt Vorlagen für %s",
   "text.easy_npc.config.previous_page": "< Zurück",
