--- a/Common/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -94,6 +94,9 @@
   "text.easy_npc.config.disable_trading": "None",
   "text.easy_npc.config.disable_trading_checkbox": "Disable Trading",
   "text.easy_npc.config.disable_trading_text": "The checkbox will disable trading, which means that the trading will not be displayed or activated when the checkbox is selected or checked.\n\nThis can be useful when the trading will be triggered by other actions.",
+  "text.easy_npc.config.disable_skin": "None",
+  "text.easy_npc.config.disable_skin_checkbox": "Disable Skin",
+  "text.easy_npc.config.disable_skin_text": "The checkbox will disable the skin, which means that the skin will not be displayed when the checkbox is selected or checked.\n\nThis can be useful when the skin will be rendered by other mods or if you need an invisible NPC.",
   "text.easy_npc.config.distance_actions": "Distance",
   "text.easy_npc.config.edit_no_button": "Edit No Button",
   "text.easy_npc.config.edit_skin": "Edit Skin",
