--- a/Common/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -1,36 +1,39 @@
 {
+  "block.easy_npc.easy_npc_spawner": "EasyNPC Spawner",
   "entity.easy_npc.allay": "Allay",
   "entity.easy_npc.cat": "Katze",
   "entity.easy_npc.chicken": "Huhn",
-  "entity.easy_npc.fairy": "Feen",
-  "entity.easy_npc.husk": "Husk",
   "entity.easy_npc.drowned": "Ertrunkener",
+  "entity.easy_npc.fairy": "Feen",
   "entity.easy_npc.humanoid": "Humanoider",
   "entity.easy_npc.humanoid_slim": "Humanoider (schl.)",
+  "entity.easy_npc.husk": "Husk",
   "entity.easy_npc.iron_golem": "Eisengolem",
   "entity.easy_npc.skeleton": "Skelett",
-  "entity.easy_npc.villager": "Dorfbewohner",
   "entity.easy_npc.stray": "Stray",
+  "entity.easy_npc.villager": "Dorfbewohner",
   "entity.easy_npc.wither_skeleton": "Wither Skelett",
   "entity.easy_npc.zombie": "Zombie",
   "entity.easy_npc.zombie_villager": "Zombie-Dorfbewohner",
   "item.easy_npc.allay_spawn_egg": "Allay NPC Spawn-Ei",
   "item.easy_npc.cat_spawn_egg": "Katzen NPC Spawn-Ei",
   "item.easy_npc.chicken_spawn_egg": "Hühner NPC Spawn-Ei",
-  "item.easy_npc.easy_npc_wand": "EasyNPC Stab",
-  "item.easy_npc.move_easy_npc": "Verschiebe EasyNPC",
-  "item.easy_npc.husk_spawn_egg": "Husk NPC Spawn Egg",
   "item.easy_npc.drowned_spawn_egg": "Ertrunkener NPC Spawn Egg",
+  "item.easy_npc.easy_npc_preset": "NPC Vorlage",
+  "item.easy_npc.easy_npc_preset_empty": "Leere NPC Vorlage",
+  "item.easy_npc.easy_npc_wand": "EasyNPC Stab",
   "item.easy_npc.fairy_spawn_egg": "Elfen NPC Spawn-Ei",
   "item.easy_npc.humanoid_slim_spawn_egg": "Humanoides (schl.) NPC-Spawn-Ei",
   "item.easy_npc.humanoid_spawn_egg": "Humanoides NPC-Spawn-Ei",
+  "item.easy_npc.husk_spawn_egg": "Husk NPC Spawn Egg",
   "item.easy_npc.iron_golem_spawn_egg": "Eisengolem NPC-Spawn-Ei",
+  "item.easy_npc.move_easy_npc": "Verschiebe EasyNPC",
   "item.easy_npc.skeleton_spawn_egg": "Skelett NPC-Spawn-Ei",
+  "item.easy_npc.stray_spawn_egg": "Stray NPC Spawn-Ei",
   "item.easy_npc.villager_spawn_egg": "Dorfbewohner NPC-Spawn-Ei",
+  "item.easy_npc.wither_skeleton_spawn_egg": "Wither Skelett NPC Spawn-Ei",
   "item.easy_npc.zombie_spawn_egg": "Zombie NPC-Spawn-Ei",
   "item.easy_npc.zombie_villager_spawn_egg": "Zombie Dorfbewohner NPC-Spawn-Ei",
-  "item.easy_npc.stray_spawn_egg": "Stray NPC Spawn-Ei",
-  "item.easy_npc.wither_skeleton_spawn_egg": "Wither Skelett NPC Spawn-Ei",
   "itemGroup.easy_npc.config_items": "EasyNPC - Konfigurationswerkzeuge",
   "itemGroup.easy_npc.spawn_eggs": "EasyNPC - Spawn-Eier",
   "text.easy_npc.armourers_workshop.no_support": "Das Skin-Modell %1$s für %2$s wird von Armourer's Workshop noch nicht offiziell unterstützt! Bitte verwenden Sie stattdessen die offiziell empfohlenen Hautmodelle, wie z.B. das humanoide Modell.",
@@ -91,12 +94,13 @@
   "text.easy_npc.config.disable_dialog": "Keinen",
   "text.easy_npc.config.disable_dialog_checkbox": "Deaktiviere Dialog",
   "text.easy_npc.config.disable_dialog_text": "Das Kontrollkästchen deaktiviert den Dialog, was bedeutet, dass der Dialog nicht angezeigt oder aktiviert wird, wenn das Kontrollkästchen ausgewählt oder markiert wird.\n\nDies kann nützlich sein, wenn der Dialog nicht erforderlich ist oder die Benutzererfahrung beeinträchtigen kann.",
-  "text.easy_npc.config.disable_trading": "Keinen",
-  "text.easy_npc.config.disable_trading_checkbox": "Deaktiviere Handel",
-  "text.easy_npc.config.disable_trading_text": "Das Kontrollkästchen deaktiviert den Handel, was bedeutet, dass der Handel nicht angezeigt oder aktiviert wird, wenn das Kontrollkästchen ausgewählt oder markiert wird.\n\nDies kann nützlich sein, wenn der Handel über andere Aktionen getriggert wird.",
   "text.easy_npc.config.disable_skin": "Keinen",
   "text.easy_npc.config.disable_skin_checkbox": "Skin deaktivieren",
   "text.easy_npc.config.disable_skin_text": "Das Kontrollkästchen deaktiviert den Skin, was bedeutet, dass der Skin nicht angezeigt wird, wenn das Kontrollkästchen ausgewählt oder aktiviert ist.\n\nDies kann nützlich sein, wenn der Skin von anderen Mods gerendert wird oder wenn Sie einen unsichtbaren NPC benötigen.",
+  "text.easy_npc.config.disable_trading": "Keinen",
+  "text.easy_npc.config.disable_trading_checkbox": "Deaktiviere Handel",
+  "text.easy_npc.config.disable_trading_text": "Das Kontrollkästchen deaktiviert den Handel, was bedeutet, dass der Handel nicht angezeigt oder aktiviert wird, wenn das Kontrollkästchen ausgewählt oder markiert wird.\n\nDies kann nützlich sein, wenn der Handel über andere Aktionen getriggert wird.",
+  "text.easy_npc.config.display": "Anzeige",
   "text.easy_npc.config.distance_actions": "Entfernung",
   "text.easy_npc.config.edit_no_button": "Nein Button bearbeiten",
   "text.easy_npc.config.edit_skin": "Skin bearbeiten",
@@ -122,6 +126,7 @@
   "text.easy_npc.config.is_pushable": "Schiebbar",
   "text.easy_npc.config.knockback_resistance": "Rückstoß Widerstand",
   "text.easy_npc.config.label_id": "Beschriftung/Id",
+  "text.easy_npc.config.light_level": "Lichtstufe (0-15)",
   "text.easy_npc.config.lock_rotation": "Sperre",
   "text.easy_npc.config.locked": "Gesperrt",
   "text.easy_npc.config.look": "Schauen",
@@ -162,7 +167,6 @@
   "text.easy_npc.config.open_trading_screen": "Handelsbildschirm",
   "text.easy_npc.config.panic": "Panik",
   "text.easy_npc.config.player_skin": "Spieler",
-  "text.easy_npc.config.url_skin": "Url",
   "text.easy_npc.config.pose": "Pose",
   "text.easy_npc.config.pose.arms": "Arme",
   "text.easy_npc.config.pose.body": "Körper",
@@ -204,10 +208,17 @@
   "text.easy_npc.config.scaling": "Skalierung",
   "text.easy_npc.config.skin": "Skin",
   "text.easy_npc.config.skin_reloading": "Skins werden neu geladen, bitte warten ...",
+  "text.easy_npc.config.spawner.delay": "Verzögerung",
+  "text.easy_npc.config.spawner.max_nearby_entities": "Max Entitäten in der Nähe",
+  "text.easy_npc.config.spawner.preset_item": "NPC Vorlage",
+  "text.easy_npc.config.spawner.required_player_range": "Erforderlicher Spieler Bereich",
+  "text.easy_npc.config.spawner.spawn_count": "Spawn Anzahl",
+  "text.easy_npc.config.spawner.spawn_range": "Spawn Reichweite",
   "text.easy_npc.config.trading": "Handel",
   "text.easy_npc.config.trading.max_uses_per_trade": "Max. Verwendungen",
   "text.easy_npc.config.trading.minutes_for_trade_reset": "Min. für Reset",
   "text.easy_npc.config.trading.rewarded_exp_per_trade": "Belohnungs EXP",
+  "text.easy_npc.config.url_skin": "Url",
   "text.easy_npc.config.use_a_player_name": "Verwende einen Spielernamen",
   "text.easy_npc.config.use_a_skin_url": "Verwende eine Skin-URL",
   "text.easy_npc.config.water_avoiding_random_stroll": "Vermeide Wasser beim zufälligen Schlendern",
@@ -216,6 +227,11 @@
   "text.easy_npc.config.yes_answer": "Ja - Antwort",
   "text.easy_npc.config.yes_no_dialog": "Ja/Nein",
   "text.easy_npc.config.zombie_attack": "Benutze Zombie Angriff",
+  "text.easy_npc.container.easy_npc_spawner_entity": "EasyNPC Spawner",
+  "text.easy_npc.item.easy_npc_preset": "► Rechtsklick auf leere Stelle, um den NPC zu spawnen.",
+  "text.easy_npc.item.easy_npc_preset.custom_name": "Name: %s",
+  "text.easy_npc.item.easy_npc_preset.entity_type": "Entitätstyp: %s",
+  "text.easy_npc.item.easy_npc_preset_empty": "► Rechtsklick auf einen NPC, um dessen Einstellungen als neue Voreinstellung zu speichern.",
   "text.easy_npc.item.easy_npc_wand": "Der Easy NPC-Zauberstab ist ein Konfigurationswerkzeug für EasyNPCs, das eine einfachere Auswahl und Konfiguration von NPCs ermöglicht, ohne dass sie direkt ausgewählt werden müssen.",
   "text.easy_npc.item.move_easy_npc": "Wählen Sie den EasyNPC mit der linken Maustaste aus und bewegen Sie ihn mit der rechten Maustaste an die gewünschte Position.",
   "text.easy_npc.not_implemented": "Noch nicht implementiert!",
