--- a/Common/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -1,36 +1,39 @@
 {
+  "block.easy_npc.easy_npc_spawner": "EasyNPC Spawner",
   "entity.easy_npc.allay": "Allay",
   "entity.easy_npc.cat": "Cat",
   "entity.easy_npc.chicken": "Chicken",
-  "entity.easy_npc.fairy": "Fairy",
-  "entity.easy_npc.husk": "Husk",
   "entity.easy_npc.drowned": "Drowned",
+  "entity.easy_npc.fairy": "Fairy",
   "entity.easy_npc.humanoid": "Humanoid",
   "entity.easy_npc.humanoid_slim": "Humanoid (slim)",
+  "entity.easy_npc.husk": "Husk",
   "entity.easy_npc.iron_golem": "Iron Golem",
   "entity.easy_npc.skeleton": "Skeleton",
-  "entity.easy_npc.villager": "Villager",
-  "entity.easy_npc.zombie": "Zombie",
   "entity.easy_npc.stray": "Stray",
+  "entity.easy_npc.villager": "Villager",
   "entity.easy_npc.wither_skeleton": "Wither Skeleton",
+  "entity.easy_npc.zombie": "Zombie",
   "entity.easy_npc.zombie_villager": "Zombie Villager",
   "item.easy_npc.allay_spawn_egg": "Allay NPC Spawn Egg",
   "item.easy_npc.cat_spawn_egg": "Cat NPC Spawn Egg",
   "item.easy_npc.chicken_spawn_egg": "Chicken NPC Spawn Egg",
-  "item.easy_npc.easy_npc_wand": "EasyNPC Wand",
-  "item.easy_npc.move_easy_npc": "Move EasyNPC",
-  "item.easy_npc.husk_spawn_egg": "Husk NPC Spawn Egg",
   "item.easy_npc.drowned_spawn_egg": "Drowned NPC Spawn Egg",
+  "item.easy_npc.easy_npc_preset": "NPC Preset",
+  "item.easy_npc.easy_npc_preset_empty": "Empty NPC Preset",
+  "item.easy_npc.easy_npc_wand": "EasyNPC Wand",
   "item.easy_npc.fairy_spawn_egg": "Fairy NPC Spawn Egg",
   "item.easy_npc.humanoid_slim_spawn_egg": "Humanoid (slim) NPC Spawn Egg",
   "item.easy_npc.humanoid_spawn_egg": "Humanoid NPC Spawn Egg",
+  "item.easy_npc.husk_spawn_egg": "Husk NPC Spawn Egg",
   "item.easy_npc.iron_golem_spawn_egg": "Iron Golem NPC Spawn Egg",
+  "item.easy_npc.move_easy_npc": "Move EasyNPC",
   "item.easy_npc.skeleton_spawn_egg": "Skeleton NPC-Spawn-Ei",
+  "item.easy_npc.stray_spawn_egg": "Stray NPC Spawn Egg",
   "item.easy_npc.villager_spawn_egg": "Villager NPC Spawn Egg",
+  "item.easy_npc.wither_skeleton_spawn_egg": "Wither Skeleton NPC Spawn Egg",
   "item.easy_npc.zombie_spawn_egg": "Zombie NPC Spawn Egg",
   "item.easy_npc.zombie_villager_spawn_egg": "Zombie Villager NPC Spawn Egg",
-  "item.easy_npc.stray_spawn_egg": "Stray NPC Spawn Egg",
-  "item.easy_npc.wither_skeleton_spawn_egg": "Wither Skeleton NPC Spawn Egg",
   "itemGroup.easy_npc.config_items": "EasyNPC - Config Items",
   "itemGroup.easy_npc.spawn_eggs": "EasyNPC - Spawn Eggs",
   "text.easy_npc.armourers_workshop.no_support": "The skin model %1$s for %2$s is not official supported with Armourer's Workshop yet! Please use the official recommended skin models like the humanoid model instead.",
@@ -91,12 +94,13 @@
   "text.easy_npc.config.disable_dialog": "None",
   "text.easy_npc.config.disable_dialog_checkbox": "Disable Dialog",
   "text.easy_npc.config.disable_dialog_text": "The checkbox will disable the dialog, which means that the dialog will not be displayed or activated when the checkbox is selected or checked.\n\nThis can be useful when the dialog is not necessary or may be intrusive to the user experience",
-  "text.easy_npc.config.disable_trading": "None",
-  "text.easy_npc.config.disable_trading_checkbox": "Disable Trading",
-  "text.easy_npc.config.disable_trading_text": "The checkbox will disable trading, which means that the trading will not be displayed or activated when the checkbox is selected or checked.\n\nThis can be useful when the trading will be triggered by other actions.",
   "text.easy_npc.config.disable_skin": "None",
   "text.easy_npc.config.disable_skin_checkbox": "Disable Skin",
   "text.easy_npc.config.disable_skin_text": "The checkbox will disable the skin, which means that the skin will not be displayed when the checkbox is selected or checked.\n\nThis can be useful when the skin will be rendered by other mods or if you need an invisible NPC.",
+  "text.easy_npc.config.disable_trading": "None",
+  "text.easy_npc.config.disable_trading_checkbox": "Disable Trading",
+  "text.easy_npc.config.disable_trading_text": "The checkbox will disable trading, which means that the trading will not be displayed or activated when the checkbox is selected or checked.\n\nThis can be useful when the trading will be triggered by other actions.",
+  "text.easy_npc.config.display": "Display",
   "text.easy_npc.config.distance_actions": "Distance",
   "text.easy_npc.config.edit_no_button": "Edit No Button",
   "text.easy_npc.config.edit_skin": "Edit Skin",
@@ -122,6 +126,7 @@
   "text.easy_npc.config.is_pushable": "Pushable",
   "text.easy_npc.config.knockback_resistance": "Knockback Resistance",
   "text.easy_npc.config.label_id": "Label/Id",
+  "text.easy_npc.config.light_level": "Light Level (0-15)",
   "text.easy_npc.config.lock_rotation": "Lock",
   "text.easy_npc.config.locked": "Locked",
   "text.easy_npc.config.look": "Look",
@@ -162,7 +167,6 @@
   "text.easy_npc.config.open_trading_screen": "Trading Screen",
   "text.easy_npc.config.panic": "Panic",
   "text.easy_npc.config.player_skin": "Player",
-  "text.easy_npc.config.url_skin": "Url",
   "text.easy_npc.config.pose": "Pose",
   "text.easy_npc.config.pose.arms": "Arms",
   "text.easy_npc.config.pose.body": "Body",
@@ -204,10 +208,17 @@
   "text.easy_npc.config.scaling": "Scaling",
   "text.easy_npc.config.skin": "Skin",
   "text.easy_npc.config.skin_reloading": "Reloading skins, please wait ...",
+  "text.easy_npc.config.spawner.delay": "Delay",
+  "text.easy_npc.config.spawner.max_nearby_entities": "Max Nearby Entities",
+  "text.easy_npc.config.spawner.preset_item": "NPC Preset",
+  "text.easy_npc.config.spawner.required_player_range": "Required Player Range",
+  "text.easy_npc.config.spawner.spawn_count": "Spawn Count",
+  "text.easy_npc.config.spawner.spawn_range": "Spawn Range",
   "text.easy_npc.config.trading": "Trading",
   "text.easy_npc.config.trading.max_uses_per_trade": "Max Uses",
   "text.easy_npc.config.trading.minutes_for_trade_reset": "Min. for Reset",
   "text.easy_npc.config.trading.rewarded_exp_per_trade": "Rewarded Exp",
+  "text.easy_npc.config.url_skin": "Url",
   "text.easy_npc.config.use_a_player_name": "Use a Player Name",
   "text.easy_npc.config.use_a_skin_url": "Use a Skin URL",
   "text.easy_npc.config.water_avoiding_random_stroll": "Water Avoiding Random Stroll",
@@ -216,6 +227,11 @@
   "text.easy_npc.config.yes_answer": "Yes - Answer",
   "text.easy_npc.config.yes_no_dialog": "Yes/No",
   "text.easy_npc.config.zombie_attack": "Perform Zombie Attack",
+  "text.easy_npc.container.easy_npc_spawner_entity": "EasyNPC Spawner",
+  "text.easy_npc.item.easy_npc_preset": "► Right click on empty place to spawn the NPC.",
+  "text.easy_npc.item.easy_npc_preset.custom_name": "Name: %s",
+  "text.easy_npc.item.easy_npc_preset.entity_type": "Entity Type: %s",
+  "text.easy_npc.item.easy_npc_preset_empty": "► Right click on an NPC to save their settings as a new preset.",
   "text.easy_npc.item.easy_npc_wand": "The EasyNPC wand is a configuration tool for Easy NPCs that allows for easier selection and configuration of NPCs without having to directly target them.",
   "text.easy_npc.item.move_easy_npc": "Select the EasyNPC with the left mouse button and move it with the right mouse button to the targeted position.",
   "text.easy_npc.not_implemented": "Not implemented yet!",
