Added `/easy_npc preset import` support for command blocks and functions with resource location. Added `/easy_npc dialog open <npc-uuid> <player> <dialog>` command to open the dialog screen for a specific NPC and player for #75. Fixed #87: Ignore damage even from creative players and ops. Fixed #85: Added de-spawn range option for the NPC Spawner. Fixed #84: Text format codes applying on more text that they should. Fixed #77: Added options to disable armor/equipment rendering for NPCs. Fixed #76 and #79: Added home position and `MoveBackToHome` for NPCs to allow them to return to a specific position.

--- a/Common/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -140,6 +140,7 @@
   "text.easy_npc.config.look_random_around": "Schau zufällig herum",
   "text.easy_npc.config.max_health": "Max. Gesundheit",
   "text.easy_npc.config.melee_attack": "Benutze Nahkampf",
+  "text.easy_npc.config.move_back_to_home": "Zurück nach Hause",
   "text.easy_npc.config.move_back_to_village": "Zurück zum Dorf bewegen",
   "text.easy_npc.config.move_through_village": "Durch das Dorf bewegen",
   "text.easy_npc.config.movement_speed": "Bewegungsgeschwindigkeit",
@@ -214,6 +215,7 @@
   "text.easy_npc.config.spawner.required_player_range": "Erforderlicher Spieler Bereich",
   "text.easy_npc.config.spawner.spawn_count": "Spawn Anzahl",
   "text.easy_npc.config.spawner.spawn_range": "Spawn Reichweite",
+  "text.easy_npc.config.spawner.despawn_range": "Despawn Reichweite",
   "text.easy_npc.config.trading": "Handel",
   "text.easy_npc.config.trading.max_uses_per_trade": "Max. Verwendungen",
   "text.easy_npc.config.trading.minutes_for_trade_reset": "Min. für Reset",
