--- a/Common/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -140,6 +140,7 @@
   "text.easy_npc.config.look_random_around": "Look Random Around",
   "text.easy_npc.config.max_health": "Max Health",
   "text.easy_npc.config.melee_attack": "Perform Melee Attack",
+  "text.easy_npc.config.move_back_to_home": "Move back to Home",
   "text.easy_npc.config.move_back_to_village": "Move back to Village",
   "text.easy_npc.config.move_through_village": "Move through Village",
   "text.easy_npc.config.movement_speed": "Movement Speed",
@@ -214,6 +215,7 @@
   "text.easy_npc.config.spawner.required_player_range": "Required Player Range",
   "text.easy_npc.config.spawner.spawn_count": "Spawn Count",
   "text.easy_npc.config.spawner.spawn_range": "Spawn Range",
+  "text.easy_npc.config.spawner.despawn_range": "Despawn Range",
   "text.easy_npc.config.trading": "Trading",
   "text.easy_npc.config.trading.max_uses_per_trade": "Max Uses",
   "text.easy_npc.config.trading.minutes_for_trade_reset": "Min. for Reset",
