Improved stroll objectives for flying NPCs. Improved general navigation support for all NPCs. Fixed fairy hitbox. Fixed orc hitbox.

--- a/Common/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -4,28 +4,30 @@
   "entity.easy_npc.cat": "Katze",
   "entity.easy_npc.chicken": "Huhn",
   "entity.easy_npc.drowned": "Ertrunkener",
+  "entity.easy_npc.evoker": "Beschwörer",
   "entity.easy_npc.fairy": "Feen",
   "entity.easy_npc.humanoid": "Humanoider",
   "entity.easy_npc.humanoid_slim": "Humanoider (schl.)",
   "entity.easy_npc.husk": "Husk",
+  "entity.easy_npc.illusioner": "Illusionist",
   "entity.easy_npc.iron_golem": "Eisengolem",
+  "entity.easy_npc.orc": "Ork",
+  "entity.easy_npc.pig": "Schwein",
+  "entity.easy_npc.pillager": "Plünderer",
   "entity.easy_npc.skeleton": "Skelett",
   "entity.easy_npc.stray": "Stray",
-  "entity.easy_npc.pig": "Schwein",
   "entity.easy_npc.villager": "Dorfbewohner",
+  "entity.easy_npc.vindicator": "Rächer",
   "entity.easy_npc.wither_skeleton": "Wither Skelett",
   "entity.easy_npc.zombie": "Zombie",
-  "entity.easy_npc.evoker": "Beschwörer",
-  "entity.easy_npc.illusioner": "Illusionist",
-  "entity.easy_npc.pillager": "Plünderer",
-  "entity.easy_npc.vindicator": "Rächer",
   "entity.easy_npc.zombie_villager": "Zombie-Dorfbewohner",
-  "item.easy_npc.spawn_egg": "%s NPC Spawn-Ei",
   "item.easy_npc.easy_npc_preset": "NPC Vorlage",
   "item.easy_npc.easy_npc_preset_empty": "Leere NPC Vorlage",
   "item.easy_npc.easy_npc_wand": "EasyNPC Stab",
   "item.easy_npc.move_easy_npc": "Verschiebe EasyNPC",
+  "item.easy_npc.spawn_egg": "%s NPC Spawn-Ei",
   "itemGroup.easy_npc.config_items": "EasyNPC - Konfigurationswerkzeuge",
+  "itemGroup.easy_npc.spawn_eggs": "EasyNPC - Spawn Eggs",
   "text.easy_npc.armourers_workshop.no_support": "Das Skin-Modell %1$s für %2$s wird von Armourer's Workshop noch nicht offiziell unterstützt! Bitte verwenden Sie stattdessen die offiziell empfohlenen Hautmodelle, wie z.B. das humanoide Modell.",
   "text.easy_npc.config.abilities": "Fähigkeiten",
   "text.easy_npc.config.actions": "Aktionen",
@@ -203,12 +205,12 @@
   "text.easy_npc.config.skin": "Skin",
   "text.easy_npc.config.skin_reloading": "Skins werden neu geladen, bitte warten ...",
   "text.easy_npc.config.spawner.delay": "Verzögerung",
+  "text.easy_npc.config.spawner.despawn_range": "Despawn Reichweite",
   "text.easy_npc.config.spawner.max_nearby_entities": "Max Entitäten in der Nähe",
   "text.easy_npc.config.spawner.preset_item": "NPC Vorlage",
   "text.easy_npc.config.spawner.required_player_range": "Erforderlicher Spieler Bereich",
   "text.easy_npc.config.spawner.spawn_count": "Spawn Anzahl",
   "text.easy_npc.config.spawner.spawn_range": "Spawn Reichweite",
-  "text.easy_npc.config.spawner.despawn_range": "Despawn Reichweite",
   "text.easy_npc.config.trading": "Handel",
   "text.easy_npc.config.trading.max_uses_per_trade": "Max. Verwendungen",
   "text.easy_npc.config.trading.minutes_for_trade_reset": "Min. für Reset",
@@ -245,6 +247,5 @@
   "text.easy_npc.respawnNPC.confirmQuestion": "Sind Sie sicher, dass Sie den NPC '%s' re-spawnen möchten?",
   "text.easy_npc.respawnNPC.confirmWarning": "Der NPC '%s' wird als neuer NPC neu gespawnt, aber mit den gleichen Einstellungen, Position und UUID!",
   "text.easy_npc.respawnNPC.respawnButton": "NPC re-spawnen",
-  "text.easy_npc.trading": "Handel",
-  "itemGroup.easy_npc.spawn_eggs": "EasyNPC - Spawn Eggs"
+  "text.easy_npc.trading": "Handel"
 }
