--- a/Common/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -4,27 +4,28 @@
   "entity.easy_npc.cat": "Cat",
   "entity.easy_npc.chicken": "Chicken",
   "entity.easy_npc.drowned": "Drowned",
+  "entity.easy_npc.evoker": "Evoker",
   "entity.easy_npc.fairy": "Fairy",
   "entity.easy_npc.humanoid": "Humanoid",
   "entity.easy_npc.humanoid_slim": "Humanoid (slim)",
   "entity.easy_npc.husk": "Husk",
+  "entity.easy_npc.illusioner": "Illusioner",
   "entity.easy_npc.iron_golem": "Iron Golem",
+  "entity.easy_npc.orc": "Orc",
+  "entity.easy_npc.pig": "Pig",
+  "entity.easy_npc.pillager": "Pillager",
   "entity.easy_npc.skeleton": "Skeleton",
   "entity.easy_npc.stray": "Stray",
   "entity.easy_npc.villager": "Villager",
+  "entity.easy_npc.vindicator": "Vindicator",
   "entity.easy_npc.wither_skeleton": "Wither Skeleton",
   "entity.easy_npc.zombie": "Zombie",
   "entity.easy_npc.zombie_villager": "Zombie Villager",
-  "entity.easy_npc.pig": "Pig",
-  "entity.easy_npc.evoker": "Evoker",
-  "entity.easy_npc.illusioner": "Illusioner",
-  "entity.easy_npc.pillager": "Pillager",
-  "entity.easy_npc.vindicator": "Vindicator",
-  "item.easy_npc.spawn_egg": "%s NPC Spawn Egg",
   "item.easy_npc.easy_npc_preset": "NPC Preset",
   "item.easy_npc.easy_npc_preset_empty": "Empty NPC Preset",
   "item.easy_npc.easy_npc_wand": "EasyNPC Wand",
   "item.easy_npc.move_easy_npc": "Move EasyNPC",
+  "item.easy_npc.spawn_egg": "%s NPC Spawn Egg",
   "itemGroup.easy_npc.config_items": "EasyNPC - Config Items",
   "itemGroup.easy_npc.spawn_eggs": "EasyNPC - Spawn Eggs",
   "text.easy_npc.armourers_workshop.no_support": "The skin model %1$s for %2$s is not official supported with Armourer's Workshop yet! Please use the official recommended skin models like the humanoid model instead.",
@@ -204,12 +205,12 @@
   "text.easy_npc.config.skin": "Skin",
   "text.easy_npc.config.skin_reloading": "Reloading skins, please wait ...",
   "text.easy_npc.config.spawner.delay": "Delay",
+  "text.easy_npc.config.spawner.despawn_range": "Despawn Range",
   "text.easy_npc.config.spawner.max_nearby_entities": "Max Nearby Entities",
   "text.easy_npc.config.spawner.preset_item": "NPC Preset",
   "text.easy_npc.config.spawner.required_player_range": "Required Player Range",
   "text.easy_npc.config.spawner.spawn_count": "Spawn Count",
   "text.easy_npc.config.spawner.spawn_range": "Spawn Range",
-  "text.easy_npc.config.spawner.despawn_range": "Despawn Range",
   "text.easy_npc.config.trading": "Trading",
   "text.easy_npc.config.trading.max_uses_per_trade": "Max Uses",
   "text.easy_npc.config.trading.minutes_for_trade_reset": "Min. for Reset",
