Normalized all cache, skin, template and preset names to lowercase with additional checks for unsafe characters. Finalized orc model and texture. Fixed #123: By adding additional checks for the export and import of NPCs. Replaced custom TAGs with entity TAGs for better compatibility with other mods. Optimized custom and player texture manager.

--- a/Common/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -12,6 +12,7 @@
   "entity.easy_npc.illusioner": "Illusionist",
   "entity.easy_npc.iron_golem": "Eisengolem",
   "entity.easy_npc.orc": "Ork",
+  "entity.easy_npc.orc_warrior": "Ork Krieger",
   "entity.easy_npc.pig": "Schwein",
   "entity.easy_npc.pillager": "Plünderer",
   "entity.easy_npc.skeleton": "Skelett",
