--- a/Common/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -12,6 +12,7 @@
   "entity.easy_npc.illusioner": "Illusioner",
   "entity.easy_npc.iron_golem": "Iron Golem",
   "entity.easy_npc.orc": "Orc",
+  "entity.easy_npc.orc_warrior": "Ork Warrior",
   "entity.easy_npc.pig": "Pig",
   "entity.easy_npc.pillager": "Pillager",
   "entity.easy_npc.skeleton": "Skeleton",
