Fixed Illager head and leg animations. Fixed #138: Added additional debug information. Fixed #135: Added check if NPC is already trading before opening a new trading screen and inform   the player about it. Fixed #136: Added additional fallback check for missing sounds, before using the explosion sound. Fixed #137: Correcting the item arm position for all model. Added hand item render support for most NPCs even for chicken and others. ;) Improved NPC model and NPC renderer by skipping rendering of invisible parts based on the model type. Unified initial movement speed for all NPCs according to their types.

--- a/Common/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -17,12 +17,14 @@
   "entity.easy_npc.pig": "Schwein",
   "entity.easy_npc.pillager": "Plünderer",
   "entity.easy_npc.skeleton": "Skelett",
+  "entity.easy_npc.skeleton_horse": "Skelett Pferd",
   "entity.easy_npc.stray": "Stray",
   "entity.easy_npc.villager": "Dorfbewohner",
   "entity.easy_npc.vindicator": "Rächer",
   "entity.easy_npc.wither_skeleton": "Wither Skelett",
   "entity.easy_npc.wolf": "Wolf",
   "entity.easy_npc.zombie": "Zombie",
+  "entity.easy_npc.zombie_horse": "Zombie Pferd",
   "entity.easy_npc.zombie_villager": "Zombie-Dorfbewohner",
   "item.easy_npc.easy_npc_preset": "NPC Vorlage",
   "item.easy_npc.easy_npc_preset_empty": "Leere NPC Vorlage",
@@ -228,6 +230,7 @@
   "text.easy_npc.config.yes_answer": "Ja - Antwort",
   "text.easy_npc.config.yes_no_dialog": "Ja/Nein",
   "text.easy_npc.config.zombie_attack": "Benutze Zombie Angriff",
+  "text.easy_npc.trading.busy": "Der NPC ist gerade mit einem anderen Handel mit %s beschäftigt.\n Bitte warte, bis der Handel beendet ist.",
   "text.easy_npc.container.easy_npc_spawner_entity": "EasyNPC Spawner",
   "text.easy_npc.item.easy_npc_preset": "► Rechtsklick auf leere Stelle, um den NPC zu spawnen.",
   "text.easy_npc.item.easy_npc_preset.custom_name": "Name: %s",
