--- a/Common/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -17,12 +17,14 @@
   "entity.easy_npc.pig": "Pig",
   "entity.easy_npc.pillager": "Pillager",
   "entity.easy_npc.skeleton": "Skeleton",
+  "entity.easy_npc.skeleton_horse": "Skeleton Horse",
   "entity.easy_npc.stray": "Stray",
   "entity.easy_npc.villager": "Villager",
   "entity.easy_npc.vindicator": "Vindicator",
   "entity.easy_npc.wither_skeleton": "Wither Skeleton",
   "entity.easy_npc.wolf": "Wolf",
   "entity.easy_npc.zombie": "Zombie",
+  "entity.easy_npc.zombie_horse": "Zombie Horse",
   "entity.easy_npc.zombie_villager": "Zombie Villager",
   "item.easy_npc.easy_npc_preset": "NPC Preset",
   "item.easy_npc.easy_npc_preset_empty": "Empty NPC Preset",
@@ -228,6 +230,7 @@
   "text.easy_npc.config.yes_answer": "Yes - Answer",
   "text.easy_npc.config.yes_no_dialog": "Yes/No",
   "text.easy_npc.config.zombie_attack": "Perform Zombie Attack",
+  "text.easy_npc.trading.busy": "The NPC is currently busy with another trade with %s.\n Please wait until the trade is finished.",
   "text.easy_npc.container.easy_npc_spawner_entity": "EasyNPC Spawner",
   "text.easy_npc.item.easy_npc_preset": "► Right click on empty place to spawn the NPC.",
   "text.easy_npc.item.easy_npc_preset.custom_name": "Name: %s",
