Fixed #159: Added additional tags and support for modded bows and crossbows items. Fixed #158: By moving specific log messages to debug level. Fixed #94: Added basic support for guns which are not extending the vanilla bow or crossbow item. Fixed #72: Added additional owner objectives and checks for Armour's Workshop Wand.

--- a/Common/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -41,15 +41,19 @@
   "text.easy_npc.config.armor": "Rüstung",
   "text.easy_npc.config.armor_toughness": "Rüstungshärte",
   "text.easy_npc.config.attack": "Angriff",
-  "text.easy_npc.config.attack_animal": "Attackiere Tiere",
+  "text.easy_npc.config.attack_animal": "Attackier Tiere",
   "text.easy_npc.config.attack_damage": "Angriffsschaden",
   "text.easy_npc.config.attack_knockback": "Angriffsrückstoß",
-  "text.easy_npc.config.attack_mob": "Attackiere Mobs",
-  "text.easy_npc.config.attack_mob_without_creeper": "Attackiere Mobs (außer Creeper)",
-  "text.easy_npc.config.attack_monster": "Attackiere Monster",
-  "text.easy_npc.config.attack_player": "Attackiere Spieler",
+  "text.easy_npc.config.attack_mob": "Attackier Mobs",
+  "text.easy_npc.config.attack_mob_without_creeper": "Attackier Mobs (ohne Creeper)",
+  "text.easy_npc.config.attack_monster": "Attackier Monster",
+  "text.easy_npc.config.attack_player": "Attackier Spieler",
+  "text.easy_npc.config.attack_player_without_owner": "Attackier Spieler (ohne Besitzer)",
   "text.easy_npc.config.attack_speed": "Angriffsgeschwindigkeit",
-  "text.easy_npc.config.attack_villager": "Attackiere Dorfbewohner",
+  "text.easy_npc.config.attack_villager": "Attackier Dorfbewohner",
+  "text.easy_npc.config.attack_types": "Angriffstypen",
+  "text.easy_npc.config.attack_targets": "Angriffsziele",
+  "text.easy_npc.config.gun_attack": "Schusswaffen Angriff",
   "text.easy_npc.config.attributes": "Attribute",
   "text.easy_npc.config.avoid_sun": "Vermeide Sonne",
   "text.easy_npc.config.base": "Basis",
@@ -137,7 +141,7 @@
   "text.easy_npc.config.look_at_villager": "Schau auf Dorfbewohner",
   "text.easy_npc.config.look_random_around": "Schau zufällig herum",
   "text.easy_npc.config.max_health": "Max. Gesundheit",
-  "text.easy_npc.config.melee_attack": "Benutze Nahkampf",
+  "text.easy_npc.config.melee_attack": "Nahkampf",
   "text.easy_npc.config.move_back_to_home": "Zurück nach Hause",
   "text.easy_npc.config.move_back_to_village": "Zurück zum Dorf bewegen",
   "text.easy_npc.config.move_through_village": "Durch das Dorf bewegen",
@@ -229,7 +233,7 @@
   "text.easy_npc.config.yes": "Ja",
   "text.easy_npc.config.yes_answer": "Ja - Antwort",
   "text.easy_npc.config.yes_no_dialog": "Ja/Nein",
-  "text.easy_npc.config.zombie_attack": "Benutze Zombie Angriff",
+  "text.easy_npc.config.zombie_attack": "Zombie Angriff",
   "text.easy_npc.trading.busy": "Der NPC ist gerade mit einem anderen Handel mit %s beschäftigt.\n Bitte warte, bis der Handel beendet ist.",
   "text.easy_npc.container.easy_npc_spawner_entity": "EasyNPC Spawner",
   "text.easy_npc.item.easy_npc_preset": "► Rechtsklick auf leere Stelle, um den NPC zu spawnen.",
