--- a/Common/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -45,11 +45,15 @@
   "text.easy_npc.config.attack_damage": "Attack Damage",
   "text.easy_npc.config.attack_knockback": "Attack Knockback",
   "text.easy_npc.config.attack_mob": "Attack Mob",
-  "text.easy_npc.config.attack_mob_without_creeper": "Attack Mob (without Creepers)",
+  "text.easy_npc.config.attack_mob_without_creeper": "Attack Mob (w/o Creeper)",
   "text.easy_npc.config.attack_monster": "Attack Monster",
   "text.easy_npc.config.attack_player": "Attack Player",
+  "text.easy_npc.config.attack_player_without_owner": "Attack Player (w/o Owner)",
   "text.easy_npc.config.attack_speed": "Attack Speed",
   "text.easy_npc.config.attack_villager": "Attack Villager",
+  "text.easy_npc.config.attack_types": "Attack Types",
+  "text.easy_npc.config.attack_targets": "Attack Targets",
+  "text.easy_npc.config.gun_attack": "Gun Attack",
   "text.easy_npc.config.attributes": "Attributes",
   "text.easy_npc.config.avoid_sun": "Avoid Sun",
   "text.easy_npc.config.base": "Base",
@@ -137,7 +141,7 @@
   "text.easy_npc.config.look_at_villager": "Look at Villager",
   "text.easy_npc.config.look_random_around": "Look Random Around",
   "text.easy_npc.config.max_health": "Max Health",
-  "text.easy_npc.config.melee_attack": "Perform Melee Attack",
+  "text.easy_npc.config.melee_attack": "Melee Attack",
   "text.easy_npc.config.move_back_to_home": "Move back to Home",
   "text.easy_npc.config.move_back_to_village": "Move back to Village",
   "text.easy_npc.config.move_through_village": "Move through Village",
@@ -229,7 +233,7 @@
   "text.easy_npc.config.yes": "Yes",
   "text.easy_npc.config.yes_answer": "Yes - Answer",
   "text.easy_npc.config.yes_no_dialog": "Yes/No",
-  "text.easy_npc.config.zombie_attack": "Perform Zombie Attack",
+  "text.easy_npc.config.zombie_attack": "Zombie Attack",
   "text.easy_npc.trading.busy": "The NPC is currently busy with another trade with %s.\n Please wait until the trade is finished.",
   "text.easy_npc.container.easy_npc_spawner_entity": "EasyNPC Spawner",
   "text.easy_npc.item.easy_npc_preset": "► Right click on empty place to spawn the NPC.",
