Fixed #179 by adding and documenting the new `/easy_npc preset` commands. Fixed #164 by adding mob types for NPCs. Fixed #146 by showing processing errors with skins.

--- a/Common/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -245,9 +245,9 @@
   "text.easy_npc.item.easy_npc_wand": "Der Easy NPC-Zauberstab ist ein Konfigurationswerkzeug für EasyNPCs, das eine einfachere Auswahl und Konfiguration von NPCs ermöglicht, ohne dass sie direkt ausgewählt werden müssen.",
   "text.easy_npc.item.move_easy_npc": "Wählen den EasyNPC mit der rechten Maustaste aus und bewegen Ihn mit der linken Maustaste an die gewünschte Position.",
   "text.easy_npc.not_implemented": "Noch nicht implementiert!",
-  "text.easy_npc.preset.importButton": "Importiere Vorlage",
-  "text.easy_npc.preset.importQuestion": "Sind Sie sicher, dass Sie die Vorlage '%s' importieren möchten?",
-  "text.easy_npc.preset.importWarning": "Alle aktuellen Einstellungen für '%s' werden überschrieben!",
+  "text.easy_npc.config.preset.importButton": "Importiere Vorlage",
+  "text.easy_npc.config.preset.importQuestion": "Sind Sie sicher, dass Sie die Vorlage '%s' importieren möchten?",
+  "text.easy_npc.config.preset.importWarning": "Alle aktuellen Einstellungen für '%s' werden überschrieben!",
   "text.easy_npc.removeDialog.deleteButton": "Dialog löschen",
   "text.easy_npc.removeDialog.deleteQuestion": "Sind Sie sicher, dass Sie diesen Dialog löschen möchten?",
   "text.easy_npc.removeDialog.deleteWarning": "Der Dialog '%s' wird für immer verloren sein! (Das ist eine sehr lange Zeit!)",
