--- a/Common/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -245,9 +245,9 @@
   "text.easy_npc.item.easy_npc_wand": "The EasyNPC wand is a configuration tool for Easy NPCs that allows for easier selection and configuration of NPCs without having to directly target them.",
   "text.easy_npc.item.move_easy_npc": "Select the EasyNPC with the right mouse button and move it with the left mouse button to the targeted position.",
   "text.easy_npc.not_implemented": "Not implemented yet!",
-  "text.easy_npc.preset.importButton": "Import Preset",
-  "text.easy_npc.preset.importQuestion": "Are you sure you want to import the preset '%s'?",
-  "text.easy_npc.preset.importWarning": "This will overwrite the '%s' NPC settings!",
+  "text.easy_npc.config.preset.importButton": "Import Preset",
+  "text.easy_npc.config.preset.importQuestion": "Are you sure you want to import the preset '%s'?",
+  "text.easy_npc.config.preset.importWarning": "This will overwrite the '%s' NPC settings!",
   "text.easy_npc.removeDialog.deleteButton": "Delete Dialog",
   "text.easy_npc.removeDialog.deleteQuestion": "Are you sure you want to delete this Dialog?",
   "text.easy_npc.removeDialog.deleteWarning": "The dialog '%s' will be lost forever! (A long time!)",
