Fixed #179 by adding and documenting the new `/easy_npc preset` commands. Fixed #164 by adding mob types for NPCs. Fixed #146 by showing processing errors with skins.

--- a/Common/src/main/resources/assets/easy_npc/lang/es_mx.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/es_mx.json
@@ -239,9 +239,9 @@
   "text.easy_npc.item.easy_npc_wand": "La varita EasyNPC es una herramienta de configuración para Easy NPCs que permite una selección y configuración más fácil de los NPCs sin tener que apuntar directamente a ellos.",
   "text.easy_npc.item.move_easy_npc": "Selecciona el EasyNPC con el botón izquierdo del ratón y muévelo con el botón derecho del ratón a la posición objetivo.",
   "text.easy_npc.not_implemented": "¡Aún no implementado!",
-  "text.easy_npc.preset.importButton": "Importar Preset",
-  "text.easy_npc.preset.importQuestion": "¿Estás seguro de que quieres importar el preset '%s'?",
-  "text.easy_npc.preset.importWarning": "¡Esto sobrescribirá la configuración del NPC '%s'!",
+  "text.easy_npc.config.preset.importButton": "Importar Preset",
+  "text.easy_npc.config.preset.importQuestion": "¿Estás seguro de que quieres importar el preset '%s'?",
+  "text.easy_npc.config.preset.importWarning": "¡Esto sobrescribirá la configuración del NPC '%s'!",
   "text.easy_npc.removeDialog.deleteButton": "Eliminar Diálogo",
   "text.easy_npc.removeDialog.deleteQuestion": "¿Estás seguro de que quieres eliminar este Diálogo?",
   "text.easy_npc.removeDialog.deleteWarning": "¡El diálogo '%s' se perderá para siempre! (¡Eso es mucho tiempo!)",
