Fixed #261 by adding additional Image Validation before storing skins to the NPC. Fixed #260 by moving specific log messages to debug level. Fixed #257 by adding a search bar for custom skins. Added Traditional Chinese translations. Thanks a lot to @yichifauzi. Added sub-folder support for custom skins. Added additional icons and symbols for better usability.

--- a/Common/src/main/resources/assets/easy_npc/lang/de_de.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/de_de.json
@@ -95,7 +95,7 @@
   "text.easy_npc.config.custom_pose.title": "Individuelle Pose",
   "text.easy_npc.config.custom_preset_export.title": "Benutzerdefinierter Vorgabe-Export",
   "text.easy_npc.config.custom_preset_import.title": "Benutzerdefinierter Voreinstellungsimport",
-  "text.easy_npc.config.custom_skin.text": "Individuelle Skins ermöglicht es dir, lokal gespeicherte Skins zu verwenden.\n\nDie Skins müssen im entsprechenden Ordner „config/easy_npc/skins“ für jeden Spieler gespeichert werden.",
+  "text.easy_npc.config.custom_skin.text": "Individuelle Skins ermöglicht es dir, lokal gespeicherte Skins zu verwenden.\nDie Skins müssen im entsprechenden Ordner „config/easy_npc/skins“ für jeden Spieler gespeichert werden.",
   "text.easy_npc.config.custom_skin.title": "Individuelle Skins",
   "text.easy_npc.config.custom_trading.title": "Individueller Handel",
   "text.easy_npc.config.custom_trading_checkbox": "Individueller Handel",
@@ -304,6 +304,7 @@
   "text.easy_npc.item.easy_npc_wand": "Der Easy NPC-Zauberstab ist ein Konfigurationswerkzeug für EasyNPCs, das eine einfachere Auswahl und Konfiguration von NPCs ermöglicht, ohne dass sie direkt ausgewählt werden müssen.",
   "text.easy_npc.item.move_easy_npc": "Wählen den EasyNPC mit der rechten Maustaste aus und bewegen Ihn mit der linken Maustaste an die gewünschte Position.",
   "text.easy_npc.not_implemented": "Noch nicht implementiert!",
+  "text.easy_npc.invalid_remote_image": "Das entfernte Bild ist ungültig oder nicht zugänglich!\nBitte überprüfen Sie die URL und versuchen Sie es erneut.",
   "text.easy_npc.removeActionDataEntry.deleteButton": "Aktionsdateneintrag löschen",
   "text.easy_npc.removeActionDataEntry.deleteQuestion": "Sind Sie sicher, dass Sie diesen Aktionsdateneintrag löschen wollen?",
   "text.easy_npc.removeActionDataEntry.deleteWarning": "Der Aktionsdateneintrag '%s' geht für immer verloren!",
