--- a/Common/src/main/resources/assets/easy_npc/lang/zh_cn.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/zh_cn.json
@@ -95,7 +95,7 @@
   "text.easy_npc.config.custom_pose.title": "自定义姿势",
   "text.easy_npc.config.custom_preset_export.title": "自定义预设导出",
   "text.easy_npc.config.custom_preset_import.title": "自定义预设导入",
-  "text.easy_npc.config.custom_skin_text": "自定义皮肤允许您对 NPC 使用本地存储的皮肤.\n\n皮肤必须存储在每个玩家的相应 'config/easy_npc/skins' 文件夹中.",
+  "text.easy_npc.config.custom_skin.text": "自定义皮肤允许您对 NPC 使用本地存储的皮肤.\n皮肤必须存储在每个玩家的相应 'config/easy_npc/skins' 文件夹中.",
   "text.easy_npc.config.custom_skin.title": "自定义皮肤",
   "text.easy_npc.config.custom_trading.title": "自定义交易",
   "text.easy_npc.config.custom_trading_checkbox": "自定义交易",
@@ -132,7 +132,7 @@
   "text.easy_npc.config.disable_dialog_text": "该复选框将禁用对话框，这意味着当选中该复选框时，对话框将不会显示或激活.\n\n当对话不是必需或会影响玩家体验时,这可能很有用.",
   "text.easy_npc.config.disable_skin": "None",
   "text.easy_npc.config.disable_skin_checkbox": "无效的外观",
-  "text.easy_npc.config.disable_skin_text": "该复选框将禁用皮肤，这意味着在选中该复选框时不会显示皮肤.\n\n当皮肤将由其他模组渲染或需要隐形NPC时，这可能很有用.",
+  "text.easy_npc.config.disable_skin.text": "该复选框将禁用皮肤，这意味着在选中该复选框时不会显示皮肤.\n\n当皮肤将由其他模组渲染或需要隐形NPC时，这可能很有用.",
   "text.easy_npc.config.disable_trading": "None",
   "text.easy_npc.config.disable_trading_checkbox": "无效的交易",
   "text.easy_npc.config.disable_trading_text": "该复选框将禁用交易，这意味着当选中该复选框时，交易将不会显示或激活.\n\n当交易将由其他操作触发时，这可能很有用.",
