--- a/Common/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -95,7 +95,7 @@
   "text.easy_npc.config.custom_pose.title": "Custom Pose",
   "text.easy_npc.config.custom_preset_export.title": "Custom Preset Export",
   "text.easy_npc.config.custom_preset_import.title": "Custom Preset Import",
-  "text.easy_npc.config.custom_skin.text": "Custom skins allows you to use locally stored skins for the NPCs.\n\nThe skins must be stored in the corresponding 'config/easy_npc/skins' folder for each player.",
+  "text.easy_npc.config.custom_skin.text": "Custom skins allows you to use locally stored skins for the NPCs.\nThe skins must be stored in the corresponding 'config/easy_npc/skins' folder for each player.",
   "text.easy_npc.config.custom_skin.title": "Custom Skins",
   "text.easy_npc.config.custom_trading.title": "Custom Trading",
   "text.easy_npc.config.custom_trading_checkbox": "Custom Trading",
@@ -304,6 +304,7 @@
   "text.easy_npc.item.easy_npc_wand": "The EasyNPC wand is a configuration tool for Easy NPCs that allows for easier selection and configuration of NPCs without having to directly target them.",
   "text.easy_npc.item.move_easy_npc": "Select the EasyNPC with the right mouse button and move it with the left mouse button to the targeted position.",
   "text.easy_npc.not_implemented": "Not implemented yet!",
+  "text.easy_npc.invalid_remote_image": "The remote image is invalid or not accessible!\nPleas check the URL and try again.",
   "text.easy_npc.removeActionDataEntry.deleteButton": "Delete Action Data Entry",
   "text.easy_npc.removeActionDataEntry.deleteQuestion": "Are you sure you want to delete this Action Data Entry?",
   "text.easy_npc.removeActionDataEntry.deleteWarning": "The Action Data Entry '%s' will be lost forever!",
