Fixed #229 by adding Piglin, Piglin Brute and Zombified Piglin NPCs. Fixed #221 by using own trading data set and storing last reset time per NPC. Fixed #210 by making sure default values are set for all actions. Fixed duplicated synched entity data for Raw Zombie entity. Optimized screen background rendering for better performance and compatibility. Optimized data handling by converting some to records. Optimized custom model declaration and handling.

--- a/Common/src/main/resources/assets/easy_npc/lang/en_us.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/en_us.json
@@ -15,6 +15,9 @@
   "entity.easy_npc.orc": "Orc",
   "entity.easy_npc.orc_warrior": "Ork Warrior",
   "entity.easy_npc.pig": "Pig",
+  "entity.easy_npc.piglin": "Piglin",
+  "entity.easy_npc.piglin_brute": "Piglin Brute",
+  "entity.easy_npc.piglin_zombified": "Zombified Piglin",
   "entity.easy_npc.pillager": "Pillager",
   "entity.easy_npc.skeleton": "Skeleton",
   "entity.easy_npc.skeleton_horse": "Skeleton Horse",
