--- a/Common/src/main/resources/assets/easy_npc/lang/zh_cn.json
+++ b/Common/src/main/resources/assets/easy_npc/lang/zh_cn.json
@@ -15,6 +15,9 @@
   "entity.easy_npc.orc": "兽人",
   "entity.easy_npc.orc_warrior": "兽人战士",
   "entity.easy_npc.pig": "猪",
+  "entity.easy_npc.piglin": "猪灵",
+  "entity.easy_npc.piglin_brute": "猪灵蛮兵",
+  "entity.easy_npc.piglin_zombified": "僵尸猪灵",
   "entity.easy_npc.pillager": "掠夺者",
   "entity.easy_npc.skeleton": "骷髅",
   "entity.easy_npc.skeleton_horse": "骷髅马",
@@ -88,10 +91,13 @@
   "text.easy_npc.config.can_pass_door": "能穿过门",
   "text.easy_npc.config.can_use_nether_portal": "能使用下界传送门",
   "text.easy_npc.config.cancel": "取消",
+  "text.easy_npc.config.change_model": "改变模型",
   "text.easy_npc.config.clear": "清除",
   "text.easy_npc.config.copy_uuid": "复制 UUID",
   "text.easy_npc.config.crossbow_attack": "使用弩",
   "text.easy_npc.config.custom": "自定义",
+  "text.easy_npc.config.custom_model.text": "使用来自其他模组的自定义模型.\n\n注意: 为了兼容性，某些功能可能会受到限制或禁用.\n\n详情请参考 wiki.",
+  "text.easy_npc.config.custom_model.title": "自定义模型",
   "text.easy_npc.config.custom_pose.title": "自定义姿势",
   "text.easy_npc.config.custom_preset_export.title": "自定义预设导出",
   "text.easy_npc.config.custom_preset_import.title": "自定义预设导入",
@@ -102,6 +108,9 @@
   "text.easy_npc.config.custom_trading_text": "该复选框将启用使用自定义 NBT 数据的自定义交易.\n\n当交易是在NBT数据上定义而不是在UI界面上定义的时,这可能很有用.",
   "text.easy_npc.config.debug": "调试模式",
   "text.easy_npc.config.default": "预设",
+  "text.easy_npc.config.default_model.checkbox": "使用默认模型",
+  "text.easy_npc.config.default_model.text": "使用默认模型访问所有功能，包括姿势调整、各种皮肤和其他特定选项.",
+  "text.easy_npc.config.default_model.title": "默认模型",
   "text.easy_npc.config.default_pose.title": "默认姿势",
   "text.easy_npc.config.default_position.title": "默认位置",
   "text.easy_npc.config.default_preset_import.title": "默认预设导入",
@@ -185,6 +194,7 @@
   "text.easy_npc.config.look_objective.title": "看向目标",
   "text.easy_npc.config.look_random_around": "看向随机方向",
   "text.easy_npc.config.main.title": "配置 %s",
+  "text.easy_npc.config.make_default.tooltip": "设置为默认对话框.",
   "text.easy_npc.config.max_health": "最大生命值",
   "text.easy_npc.config.melee_attack": "使用近战攻击",
   "text.easy_npc.config.move_back_to_home": "返回home",
@@ -225,7 +235,7 @@
   "text.easy_npc.config.pose.body": "身体",
   "text.easy_npc.config.pose.crouching": "潜行",
   "text.easy_npc.config.pose.dying": "死亡",
-  "text.easy_npc.config.pose.fall_flying": "Fall Flying",
+  "text.easy_npc.config.pose.fall_flying": "鞘翅模式滑行",
   "text.easy_npc.config.pose.head": "头部",
   "text.easy_npc.config.pose.left_arm": "左臂",
   "text.easy_npc.config.pose.left_leg": "左腿",
@@ -234,7 +244,7 @@
   "text.easy_npc.config.pose.right_arm": "右臂",
   "text.easy_npc.config.pose.right_leg": "右腿",
   "text.easy_npc.config.pose.sleeping": "睡觉",
-  "text.easy_npc.config.pose.spin_attack": "Spinning Attack",
+  "text.easy_npc.config.pose.spin_attack": "横扫",
   "text.easy_npc.config.pose.standing": "站立",
   "text.easy_npc.config.pose.swimming": "游泳",
   "text.easy_npc.config.position": "位置",
@@ -248,7 +258,7 @@
   "text.easy_npc.config.previous_page": " < ",
   "text.easy_npc.config.processing_player_skin": "加载玩家皮肤中,请等待 ...",
   "text.easy_npc.config.processing_url_skin": "加载 url 皮肤,请等待 ...",
-  "text.easy_npc.config.push_entities": "推动实体",
+  "text.easy_npc.config.push_entities": "实体碰撞箱",
   "text.easy_npc.config.question": "文本",
   "text.easy_npc.config.random_stroll": "游荡",
   "text.easy_npc.config.random_stroll_around_home": "在home周围游荡",
@@ -297,6 +307,7 @@
   "text.easy_npc.config.yes_no_dialog.title": "Yes/No 对话",
   "text.easy_npc.config.zombie_attack": "执行僵尸攻击模式",
   "text.easy_npc.container.easy_npc_spawner_entity": "EasyNPC 刷怪笼",
+  "text.easy_npc.invalid_remote_image": "远程镜像无效或无法访问!\n请检查 URL，然后重试.",
   "text.easy_npc.item.easy_npc_preset": "► 右击地面以生成 NPC.",
   "text.easy_npc.item.easy_npc_preset.custom_name": "名称: %s",
   "text.easy_npc.item.easy_npc_preset.entity_type": "实体类型: %s",
